Task #1: Changed the CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,3 +3,4 @@ Edge
   - Basic Constrained Views support
   - Constrained views can be dupped
   - nocms-blocks support
+  - Tested MySQL and PostgreSQL support
